Feat(CP-30): Broker Filters and Exports Analytics (#109)
* feat(analytics): implement broker filters and export (CP-30)

* test(analytics): add AnalyticsControllerTest and improve service coverage

* feat(analytics): fix JPQL NPE, metrics bugs, and add audit migration

* fix: Resolve database schema, JPQL, and Zod validation errors

* fix(frontend): Replace incorrect Calendar component usage with CalendarIcon in AnalyticsPage